Add HTTP transport support alongside STDIO, refactor transport configuration for flexibility, and enhance testing and documentation accordingly.